syntax = "proto3";

package calculator;

option go_package = "calculator/api/proto/gen";

// 计算器服务定义
service CalculatorService {
  // 执行计算操作
  rpc Calculate(CalculateRequest) returns (CalculateResponse);
}

// 计算请求
message CalculateRequest {
  double first_number = 1;
  double second_number = 2;
  string operator = 3; // "+", "-", "*", "/"
}

// 计算响应
message CalculateResponse {
  double result = 1;
  string error = 2; // 如果有错误，例如除以零
}